DevOps/Labs/argocd-k3d/bootstrap/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: argocd-argocd-transport@kubernetescrd
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
